<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/about_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/white"
        app:title="@string/about"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        android:background="@color/colorPrimary"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/toolbar"
            android:src="@mipmap/logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="30sp"
            android:textColor="#333" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:gravity="center"
            android:text="@string/app_version"
            android:textColor="#333" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/developer"
            android:layout_marginBottom="6dp"
            android:textSize="18sp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="28dp"
            android:text="@string/developer_name"
            android:textSize="25sp"
            android:textColor="#333" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="联系方式"
            android:layout_marginBottom="6dp"
            android:textSize="18sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/icon_email"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/email"
                android:textColor="#333"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="28dp"
            android:orientation="horizontal"
            android:gravity="center">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="8dp"
                android:src="@drawable/icon_wechat"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:gravity="center"
                android:text="@string/wechat"
                android:textColor="#333"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>

    </ScrollView>

</LinearLayout>