<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:paddingLeft="18dp"
    android:paddingRight="18dp"
    android:paddingTop="30dp"
    android:paddingBottom="30dp">

    <TextView
        android:id="@+id/dialog_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/inputName"
        android:textSize="20sp"/>
    <EditText
        android:id="@+id/input_name_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:maxLines="1"
        android:hint="@string/fileName"
        android:inputType="textPersonName"/>
    <Button
        android:id="@+id/input_name_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:gravity="center"
        android:text="@string/yes"
        android:textColor="@color/white"
        android:backgroundTint="@color/colorAccent"
        android:theme="@style/AppTheme"
        android:textSize="20sp"
        android:textStyle="bold"/>


</LinearLayout>